# memc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
cmake/: memcConfig.cmake.in
include/memc/: cli.h  collector.h  maps_parser.h  process_utils.h  region.h  sampler.h  smaps_parser.h  version.h
src/: cli.cpp  collector.cpp  maps_parser.cpp  process_utils.cpp  sampler.cpp  smaps_parser.cpp
